@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam nodesep 50
skinparam ranksep 45
skinparam classFontSize 12
skinparam classAttributeFontSize 11
top to bottom direction

' ============================================================
' Design-level — Singleton (sessione utente e modalità applicativa)
' Singleton classico: field static + getInstance() synchronized,
' inizializzazione lazy (come i progetti di riferimento).
' ============================================================

' ---------- Client / chi usa il Singleton ----------
class "LoginView" <<boundary>> {
}
class "MarketplaceView" <<boundary>> {
}
class "OrdinaProdottoController" <<control>> {
  + usa la sessione
  + getDAOFactory()
}

' ---------- Singleton 1: sessione utente ----------
class "SessionManager" {
  - instance : SessionManager
  - loggedUser : UtenteBean
  - ordineInCorso : OrdineBean
  - SessionManager()
  {static} + getInstance() : SessionManager
  + getLoggedUser() : UtenteBean
  + setLoggedUser(UtenteBean) : void
  + getOrdineInCorso() : OrdineBean
  + setOrdineInCorso(OrdineBean) : void
  + logout() : void
}

note right of SessionManager
  Lazy init synchronized:
  if (instance == null) instance = new SessionManager()
end note

' ---------- Singleton 2: modalità applicativa ----------
class "ApplicationModeManager" {
  - instance : ApplicationModeManager
  - activeMode : String
  - factory : DAOFactory
  - ApplicationModeManager()
  {static} + getInstance() : ApplicationModeManager
  + getActiveMode() : String
  + setActiveMode(String) : void
  + getDAOFactory() : DAOFactory
}

note right of ApplicationModeManager
  Stesso idioma: lazy init + synchronized
end note

' ---------- usi ----------
LoginView --> SessionManager : getLoggedUser()
MarketplaceView --> SessionManager : getLoggedUser()
OrdinaProdottoController --> SessionManager : utente in checkout
OrdinaProdottoController --> ApplicationModeManager : getDAOFactory()

@enduml
